syntax = "proto3";

option java_package = "com.ranze.likechat.im.proto";
option java_outer_classname = "LoginProto";

message LoginRequest {
    string phone_num = 1;
    string password = 2;
}

message LoginResponse {
    int32 code = 1;
    string message = 2;
}
